--- a/src/mongo/tools/SConscript
+++ b/src/mongo/tools/SConscript
@@ -29,6 +29,5 @@ mongobridge = env.Program(
         '$BUILD_DIR/mongo/util/options_parser/options_parser_init',
         '$BUILD_DIR/mongo/util/signal_handlers',
     ],
-    AIB_COMPONENT='tools',
-    AIB_COMPONENTS_EXTRA=["dist-test"],
+    AIB_COMPONENT='dist-test',
 )
