SERVER-45376 Genny Auto Tasks failing on WT Develop

--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -930,6 +930,7 @@ buildvariants:
   modules:
   - wtdevelop
   - enterprise
+  - genny # needed for genny_generate_all_tasks
   expansions:
     <<: *compile-expansions
     compile-variant: -wtdevelop
