--- a/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_kill_secondaries_jscore_passthrough.yml
@@ -24,6 +24,9 @@ selector:
   - jstests/core/sortb.js
   - jstests/core/sortg.js
   - jstests/core/sortj.js
+  # TODO(SERVER-44852) re-enable once secondary oplog application supports collection creation
+  # inside multi-document transactions.
+  - jstests/core/txns/create_collection.js
 
 executor:
   archive:
