--- a/buildscripts/resmokeconfig/suites/replica_sets_large_txns_format_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_large_txns_format_jscore_passthrough.yml
@@ -12,6 +12,9 @@ selector:
   - jstests/core/txns/abort_expired_transaction.js
   - jstests/core/txns/abort_transaction_thread_does_not_block_on_locks.js
   - jstests/core/txns/kill_op_on_txn_expiry.js
+  # TODO(SERVER-44852) re-enable once secondary oplog application supports collection creation
+  # inside multi-document transactions.
+  - jstests/core/txns/create_collection.js
 
 executor:
   archive:
