--- a/buildscripts/resmokeconfig/suites/sharded_causally_consistent_jscore_txns_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_causally_consistent_jscore_txns_passthrough.yml
@@ -14,8 +14,8 @@ selector:
   # No featureCompatibilityVersion parameter on mongos.
   - jstests/core/txns/abort_unprepared_transactions_on_FCV_downgrade.js
 
-  # Implicitly creates a database through a collection rename, which does not work in a sharded
-  # cluster.
+  # TODO(SERVER-44852) Implicitly creates a database through a collection rename, which does not
+  # work in a sharded cluster.
   - jstests/core/txns/transactions_block_ddl.js
 
   # transactionLifetimeLimitSeconds parameter is not available in mongos.
@@ -29,6 +29,10 @@ selector:
   # Does not use the transactions shell helpers so afterClusterTime read concern is incorrectly
   # attached to statements in a transaction beyond the first one.
   - jstests/core/txns/non_transactional_operations_on_session_with_transaction.js
+
+  # TODO(SERVER-44852) re-enable once secondary oplog application supports collection creation
+  # inside multi-document transactions.
+  - jstests/core/txns/create_collection.js
 
   exclude_with_any_tags:
   - assumes_against_mongod_not_mongos
