--- a/buildscripts/resmokeconfig/suites/sharded_jscore_txns.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_jscore_txns.yml
@@ -26,6 +26,10 @@ selector:
   # Uses hangAfterCollectionInserts failpoint not available on mongos.
   - jstests/core/txns/speculative_snapshot_includes_all_writes.js
 
+  # TODO(SERVER-44852) re-enable once secondary oplog application supports collection creation
+  # inside multi-document transactions.
+  - jstests/core/txns/create_collection.js
+
   exclude_with_any_tags:
   - assumes_against_mongod_not_mongos
   # Transactions are not allowed to operate on capped collections.
