--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -58,6 +58,8 @@ selector:
   # mongos in 4.0 doesn't like an aggregation explain without stages for optimized away pipelines,
   # so blacklisting the test until 4.2 becomes last-stable.
   - jstests/sharding/agg_write_stages_cannot_run_on_mongos.js
+  # Enable when SERVER-40435 is backported to last stable 4.0
+  - jstests/sharding/clear_jumbo.js
   - jstests/sharding/explain_agg_read_pref.js
   - jstests/sharding/explain_cmd.js
   - jstests/sharding/failcommand_failpoint_not_parallel.js
