--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -79,6 +79,7 @@ selector:
   - jstests/sharding/change_stream_resume_from_different_mongos.js
   - jstests/sharding/change_stream_shard_failover.js
   - jstests/sharding/transactions_prohibited_in_sharded_cluster.js
+  - jstests/sharding/clear_jumbo.js
   # Requires count command to be accurate on sharded clusters, introduced in v4.0.
   - jstests/sharding/accurate_count_with_predicate.js
   # The 3.6 mongos does not support using localOps to find failpoints.
