--- a/buildscripts/resmokeconfig/suites/concurrency_simultaneous_replication_wiredtiger_eviction_debug.yml
+++ b/buildscripts/resmokeconfig/suites/concurrency_simultaneous_replication_wiredtiger_eviction_debug.yml
@@ -44,6 +44,12 @@ selector:
   - jstests/concurrency/fsm_workloads/collmod_writeconflict.js
   - jstests/concurrency/fsm_workloads/reindex_writeconflict.js
 
+  # These workloads run the compact command, which takes the checkpoint mutex, thus slowing
+  # checkpoints. This suite also makes checkpoints slower, and the combination can result in
+  # timeouts.
+  - jstests/concurrency/fsm_workloads/compact.js
+  - jstests/concurrency/fsm_workloads/compact_while_creating_indexes.js
+
   exclude_with_any_tags:
   - requires_sharding
 
