--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -336,6 +336,7 @@ error_codes:
     - {code: 299,name: OCSPCertificateStatusRevoked}
     - {code: 300,name: RangeDeletionAbandonedBecauseCollectionWithUUIDDoesNotExist}
     - {code: 301,name: DataCorruptionDetected}
+    - {code: 302,name: OCSPCertificateStatusUnknown}
 
     # Error codes 4000-8999 are reserved.
 
