SERVER-42191 Add a new test hook that checks that all orphaned documents are eventually deleted
 create mode 100644 jstests/libs/override_methods/check_orphans_are_deleted.js

--- a/buildscripts/resmokeconfig/suites/multiversion.yml
+++ b/buildscripts/resmokeconfig/suites/multiversion.yml
@@ -23,3 +23,7 @@ executor:
   config:
     shell_options:
       nodb: ''
+      global_vars:
+        TestData:
+          # TODO: SERVER-45959 remove after v4.4
+          skipCheckOrphans: true
