SERVER-45461 Fix exclude_files path in integration_tests_replset to blacklist client_dbclient_connection_integration_test

--- a/buildscripts/resmokeconfig/suites/integration_tests_sharded.yml
+++ b/buildscripts/resmokeconfig/suites/integration_tests_sharded.yml
@@ -3,7 +3,7 @@ test_kind: cpp_integration_test
 selector:
   root: build/integration_tests.txt
   exclude_files:
-  - build/integration_tests/client_dbclient_connection_integration_test* # Needs sleep command
+  - build/**/mongo/client/client_dbclient_connection_integration_test* # Needs sleep command
 
 executor:
   archive:
