--- a/buildscripts/resmokeconfig/suites/integration_tests_replset.yml
+++ b/buildscripts/resmokeconfig/suites/integration_tests_replset.yml
@@ -3,7 +3,7 @@ test_kind: cpp_integration_test
 selector:
   root: build/integration_tests.txt
   exclude_files:
-  - build/integration_tests/client_dbclient_connection_integration_test* # Needs connection to single host.
+  - build/**/mongo/client/client_dbclient_connection_integration_test* # Needs connection to single host.
 
 executor:
   archive:
