--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -570,6 +570,7 @@ icuEnv.CppUnitTest(
         'future_test_promise_int.cpp',
         'future_test_promise_void.cpp',
         'future_test_shared_future.cpp',
+        'future_util_test.cpp',
         'hierarchical_acquisition_test.cpp',
         'icu_test.cpp',
         'invalidating_lru_cache_test.cpp',
@@ -603,6 +604,7 @@ icuEnv.CppUnitTest(
         '$BUILD_DIR/mongo/base',
         '$BUILD_DIR/mongo/db/service_context',
         '$BUILD_DIR/mongo/db/service_context_test_fixture',
+        '$BUILD_DIR/mongo/executor/thread_pool_task_executor_test_fixture',
         'alarm',
         'background_job',
         'clock_source_mock',
