--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -334,6 +334,7 @@ error_codes:
     - {code: 298,name: InvalidServerType}
     - {code: 299,name: OCSPCertificateStatusRevoked}
     - {code: 300,name: RangeDeletionAbandonedDueToCollectionDrop}
+    - {code: 301,name: DataCorruptionDetected}
 
     # Error codes 4000-8999 are reserved.
 
