SERVER-45024 Add new function to handle range deletion

--- a/src/mongo/base/error_codes.yml
+++ b/src/mongo/base/error_codes.yml
@@ -333,6 +333,7 @@ error_codes:
     - {code: 297,name: HierarchicalAcquisitionLevelViolation}
     - {code: 298,name: InvalidServerType}
     - {code: 299,name: OCSPCertificateStatusRevoked}
+    - {code: 300,name: RangeDeletionAbandonedDueToCollectionDrop}
 
     # Error codes 4000-8999 are reserved.
 
