--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -5865,7 +5865,11 @@ tasks:
 
             "iam_auth_assume_aws_account" : "${iam_auth_assume_aws_account}",
             "iam_auth_assume_aws_secret_access_key" : "${iam_auth_assume_aws_secret_access_key}",
-            "iam_auth_assume_role_name" : "${iam_auth_assume_role_name}"
+            "iam_auth_assume_role_name" : "${iam_auth_assume_role_name}",
+
+            "iam_auth_ec2_instance_account" : "${iam_auth_ec2_instance_account}",
+            "iam_auth_ec2_instance_secret_access_key" : "${iam_auth_ec2_instance_secret_access_key}",
+            "iam_auth_ec2_instance_profile" : "${iam_auth_ec2_instance_profile}"
         }
         EOF
   - command: shell.exec
