--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -170,15 +170,22 @@ functions:
         working_dir: src
         silent: true
         script: |
+          set -o errexit
           is_patch=${is_patch}
           task_id=${task_id}
           perf_jira_user=${perf_jira_user}
           perf_jira_pw=${perf_jira_pw}
-          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
-          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
+          analysis_user=${dsi_analysis_atlas_user}
+          analysis_password=${dsi_analysis_atlas_pw}
           evergreen_api_key=${evergreen_api_key}
           evergreen_api_user=${evergreen_api_user}
           source ./buildscripts/signal_processing_setup.sh
+    - command: shell.exec
+      params:
+        working_dir: src
+        script: |
+          set -o verbose
+          source ./signal_processing_venv/bin/activate
           detect-changes --evergreen-api-config .evergreen.yml
     - command: shell.exec
       type: test
