--- a/etc/system_perf.yml
+++ b/etc/system_perf.yml
@@ -336,16 +336,24 @@ functions:
     - command: shell.exec
       params:
         working_dir: work
+        silent: true
         script: |
+          set -o errexit
           is_patch=${is_patch}
           task_id=${task_id}
           perf_jira_user=${perf_jira_user}
           perf_jira_pw=${perf_jira_pw}
-          dsi_analysis_atlas_user=${dsi_analysis_atlas_user}
-          dsi_analysis_atlas_pw=${dsi_analysis_atlas_pw}
+          analysis_user=${dsi_analysis_atlas_user}
+          analysis_password=${dsi_analysis_atlas_pw}
           evergreen_api_key=${evergreen_api_key}
           evergreen_api_user=${evergreen_api_user}
           source ../src/buildscripts/signal_processing_setup.sh
+    - command: shell.exec
+      params:
+        working_dir: work
+        script: |
+          set -o verbose
+          source ./signal_processing_venv/bin/activate
           detect-changes --evergreen-api-config .evergreen.yml
     - command: shell.exec
       type: test
@@ -362,7 +370,8 @@ functions:
       params:
         working_dir: work
         script: |
-          source ../src/buildscripts/signal_processing_setup.sh
+          set -o verbose
+          source ./signal_processing_venv/bin/activate
           detect-outliers --evergreen-api-config .evergreen.yml
     - command: shell.exec
       type: setup
