--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -776,7 +776,6 @@ env.Library('replica_set_messages',
                 'update_position_args.cpp',
                 'last_vote.cpp',
                 env.Idlc('repl_set_config.idl')[0],
-                env.Idlc('topology_version.idl')[0],
             ],
             LIBDEPS=[
                 '$BUILD_DIR/mongo/base',
@@ -787,6 +786,7 @@ env.Library('replica_set_messages',
                 '$BUILD_DIR/mongo/transport/transport_layer_common',
                 '$BUILD_DIR/mongo/util/net/network',
                 '$BUILD_DIR/mongo/rpc/command_status',
+                '$BUILD_DIR/mongo/rpc/metadata',
                 'optime',
                 'read_concern_args',
             ],
