--- a/src/mongo/rpc/SConscript
+++ b/src/mongo/rpc/SConscript
@@ -100,6 +100,7 @@ env.Library(
         'metadata/repl_set_metadata.cpp',
         'metadata/oplog_query_metadata.cpp',
         'metadata/tracking_metadata.cpp',
+        env.Idlc('topology_version.idl')[0],
     ],
     LIBDEPS=[
         'client_metadata',
