--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -29,6 +29,20 @@ concurrency_sharded_replication_multiversion:
 replica_sets_jscore_multiversion_passthrough:
 
 replica_sets_multiversion:
+- ticket: SERVER-42825
+  test_file: jstests/replsets/kill_reads_with_prepare_conflicts_during_step_down.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/kill_reads_with_prepare_conflicts_during_step_up.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/no_disconnect_on_stepdown.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/read_operations_during_rollback.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/read_operations_during_step_down.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/read_operations_during_step_up.js
+- ticket: SERVER-42825
+  test_file: jstests/replsets/step_down_on_secondary.js
 
 sharding_multiversion:
 - ticket: SERVER-38691
